tests/baselines/reference/parserModuleDeclaration2.d.errors.txt
==== tests/cases/compiler/parserModuleDeclaration2.d.ts (1 errors) ====
    module M {
           ~
!!! parserModuleDeclaration2.d.ts(1,8): error TS1046: A 'declare' modifier is required for a top level declaration in a .d.ts file.
    }